--- a/src/app/add-category-event/add-category-event.component.html
+++ b/src/app/add-category-event/add-category-event.component.html
@@ -4,17 +4,17 @@
             <br>
             <div class="row">
                 <div class="fontS col-sm-4">
-                    <div class="col-sm-6 text-info"><h5>Category:</h5></div>
+                    <div class="col-sm-6 text-secondary"><h5>Category:</h5></div>
                     <div class="col-sm-6"><h5> {{categoryData.category}} </h5></div>
                 </div>
                 <br>
                 <div class="fontS col-sm-4">
-                    <div class="col-sm-6 text-info"><h5>Description:</h5></div>
+                    <div class="col-sm-6 text-secondary"><h5>Description:</h5></div>
                     <div class="col-sm-6"><h5> {{categoryData.description}} </h5></div>
                 </div>
                 <div class="col-sm-2">
-                    <button mat-raised-button color="accent" *ngIf="categoryId != i" (click)="selectCategory(i)">Select</button>
-                    <button mat-raised-button color="accent" *ngIf="categoryId == i" (click)="selectCategory(i)">Deselect</button>
+                    <button mat-raised-button *ngIf="categoryId != i" (click)="selectCategory(i)">Select</button>
+                    <button mat-raised-button *ngIf="categoryId == i" (click)="selectCategory(i)">Deselect</button>
                 </div>
                 <div class="col-sm-2">
                     <button mat-raised-button color="warn" (click)="deleteCategory(i)">Delete</button>
@@ -23,7 +23,7 @@
             <br>
         </div>
         <form #categoryForm="ngForm" novalidate>
-            <h3 class="text-info fontS">Add Event Category:</h3>
+            <h3 class="text-secondary fontS">Add Event Category:</h3>
             <div class="row">
                 <div class="col-sm-6">
                     <p>
@@ -56,13 +56,13 @@
         <hr>
         <div *ngIf="categoryId != -1">
             <div class="col-sm-12">
-                <div class="text-info"><h5>Events in this category:</h5></div>
+                <div class="text-secondary"><h5>Events in this category:</h5></div>
                 <div class="row fontS">
-                    <div class="col-sm-2 text-info"><h5>S.No</h5></div>
-                    <div class="col-sm-3 text-info"><h5> Name </h5></div>
-                    <div class="col-sm-3 text-info"><h5> Description </h5></div>
-                    <div class="col-sm-1 text-info"><h5> Fees </h5></div>
-                    <div class="col-sm-1 text-info"><h5> Coupon Applicable </h5></div>
+                    <div class="col-sm-2 text-secondary"><h5>S.No</h5></div>
+                    <div class="col-sm-3 text-secondary"><h5> Name </h5></div>
+                    <div class="col-sm-3 text-secondary"><h5> Description </h5></div>
+                    <div class="col-sm-1 text-secondary"><h5> Fees </h5></div>
+                    <div class="col-sm-1 text-secondary"><h5> Coupon Applicable </h5></div>
                     <div class="col-sm-2"></div>
                 </div>
                 <div class="row" *ngFor="let event of categoryDatas[categoryId].events; let i=index">
@@ -79,7 +79,7 @@
                 <br>
             </div>
             <form #eventForm="ngForm" novalidate>
-                <h3 class="text-info fontS">Add Events in the selected Category:</h3>
+                <h3 class="text-secondary fontS">Add Events in the selected Category:</h3>
                 <div class="row">
                     <div class="col-sm-6">
                         <p>
