--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,39 +1,39 @@
 <br>
-<h5 class="text-center text-warning fontS">Showing the checked Columns: (Check/Uncheck to show/hide any column)</h5>
+<h5 class="text-center text-danger fontS">Showing the checked Columns: (Check/Uncheck to show/hide any column)</h5>
 <br>
 <div class="row" style="margin: 0 5%;">
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('b')" [(ngModel)]="show[1]">Name</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('b')" [(ngModel)]="show[1]" class="fontS">Name</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('c')" [(ngModel)]="show[2]">Email ID</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('c')" [(ngModel)]="show[2]" class="fontS">Email ID</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('d')" [(ngModel)]="show[3]">Stream</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('d')" [(ngModel)]="show[3]" class="fontS">Stream</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('e')" [(ngModel)]="show[4]">Year</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('e')" [(ngModel)]="show[4]" class="fontS">Year</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('f')" [(ngModel)]="show[5]">Contact#</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('f')" [(ngModel)]="show[5]" class="fontS">Contact#</mat-checkbox>
     </div>
     <div class="col-md-2"></div>
 </div>
 <div class="row" style="margin: 0 5%;">
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('g')" [(ngModel)]="show[6]">Institution Name</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('g')" [(ngModel)]="show[6]" class="fontS">Institution Name</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('h')" [(ngModel)]="show[7]">Registered On</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('h')" [(ngModel)]="show[7]" class="fontS">Registered On</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('i')" [(ngModel)]="show[8]">Payment Receipt</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('i')" [(ngModel)]="show[8]" class="fontS">Payment Receipt</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('j')" [(ngModel)]="show[9]">Photo</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[9]" class="fontS">Photo</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="primary" (click)="toggle('k')" [(ngModel)]="show[10]">Action</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('k')" [(ngModel)]="show[10]" class="fontS">Action</mat-checkbox>
     </div>
     <div class="col-md-2"></div>
 </div>
@@ -44,58 +44,58 @@
     </mat-form-field>
     <table mat-table [dataSource]="dataSource" style="width: 100%;">
     <ng-container matColumnDef="a">
-        <th mat-header-cell *matHeaderCellDef> # </th>
-        <td mat-cell *matCellDef="let user; let i=index"> {{i+1}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> # </th>
+        <td mat-cell *matCellDef="let user; let i=index" class="fontS"> {{i+1}} </td>
     </ng-container>
     <ng-container matColumnDef="b">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let user"> 
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Name </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> 
             {{user.name}} 
             <mat-chip-list *ngIf="user.admin" style="display: inline-block;">
-                <mat-chip style="background: orange;">Admin</mat-chip>
+                <mat-chip style="background: #dc3545; color: white; font-weight: bold;">Admin</mat-chip>
             </mat-chip-list> 
         </td>
     </ng-container>
     <ng-container matColumnDef="c">
-        <th mat-header-cell *matHeaderCellDef> Email ID </th>
-        <td mat-cell *matCellDef="let user"> {{user.email}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Email ID </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> {{user.email}} </td>
     </ng-container>
     <ng-container matColumnDef="d">
-        <th mat-header-cell *matHeaderCellDef> Stream </th>
-        <td mat-cell *matCellDef="let user"> {{user.stream}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Stream </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> {{user.stream}} </td>
     </ng-container>
     <ng-container matColumnDef="e">
-        <th mat-header-cell *matHeaderCellDef> Year </th>
-        <td mat-cell *matCellDef="let user"> {{user.year}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Year </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> {{user.year}} </td>
     </ng-container>
     <ng-container matColumnDef="f">
-        <th mat-header-cell *matHeaderCellDef> Contact# </th>
-        <td mat-cell *matCellDef="let user"> {{user.contact}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Contact# </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> {{user.contact}} </td>
     </ng-container>
     <ng-container matColumnDef="g">
-        <th mat-header-cell *matHeaderCellDef> Institution Name </th>
-        <td mat-cell *matCellDef="let user"> {{user.instituteName}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Institution Name </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> {{user.instituteName}} </td>
     </ng-container>
     <ng-container matColumnDef="h">
-        <th mat-header-cell *matHeaderCellDef> Registered On </th>
-        <td mat-cell *matCellDef="let user"> {{user.createdAt}} </td>
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Registered On </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> {{user.createdAt}} </td>
     </ng-container>
     <ng-container matColumnDef="i">
-        <th mat-header-cell *matHeaderCellDef> Payment Receipt </th>
-        <td mat-cell *matCellDef="let user"> 
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Payment Receipt </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> 
             <a *ngIf="user.receipt != ''" [href]="url+user._id+'/receipt.'+user.receipt">Download Receipt</a>
-            <div class="fontS" *ngIf="user.receipt==''">Event not registered</div>
+            <span class="fontS" *ngIf="user.receipt==''">Event not registered</span>
         </td>
     </ng-container>
     <ng-container matColumnDef="j">
-        <th mat-header-cell *matHeaderCellDef> Photo </th>
-        <td mat-cell *matCellDef="let user"> 
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Photo </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> 
             <a [href]="url+user._id+'/photo.'+user.photo">Download Photo</a>
         </td>
     </ng-container>
     <ng-container matColumnDef="k">
-        <th mat-header-cell *matHeaderCellDef> Action </th>
-        <td mat-cell *matCellDef="let user"> 
+        <th mat-header-cell *matHeaderCellDef class="fontS"> Action </th>
+        <td mat-cell *matCellDef="let user" class="fontS"> 
             <button mat-icon-button
              (click)="verifyUser(user)"
              *ngIf = "!user.verified"
@@ -109,7 +109,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator #paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons></mat-paginator>
+    <mat-paginator #paginator [pageSizeOptions]="[10, 20]" class="fontS" showFirstLastButtons></mat-paginator>
 </div>
 <br>
 <div class="loader-holder" *ngIf="loading">
