--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="container text-center">
     <br>
-    <h3 class="text-center text-warning fontS">Reset Password Panel</h3>
-    <small class="text-warning">Select a Name. Entire User information will be displayed below the drop down to help Cross-Verify. Names are sorted.</small>
+    <h3 class="text-center text-danger fontS">Reset Password Panel</h3>
+    <small class="text-danger">Select a Name. Entire User information will be displayed below the drop down to help Cross-Verify. Names are sorted.</small>
     <br><br>
     <form novalidate #changeP="ngForm" (submit)="resetPassword($event.target)" *ngIf="!loading">
         <div class="row">
@@ -17,14 +17,14 @@
                     </mat-form-field>
                 </p>
                 <div *ngIf="selectedUser" style="text-align: left;">
-                    <p style="margin: 0px;"> <span class="text-primary">Name:</span> {{selectedUser.name}}
+                    <p style="margin: 0px;"> <span class="text-secondary">Name:</span> {{selectedUser.name}}
                         <mat-icon class="text-success" *ngIf="selectedUser.verified">check_circle</mat-icon>
                     </p>
-                    <p style="margin: 0px;"> <span class="text-primary">Email ID:</span> {{selectedUser.email}} </p>
-                    <p style="margin: 0px;"> <span class="text-primary">Contact#:</span> {{selectedUser.contact}} </p>
-                    <p style="margin: 0px;"> <span class="text-primary">Stream:</span> {{selectedUser.stream}} </p>
-                    <p style="margin: 0px;"> <span class="text-primary">Year:</span> {{selectedUser.year}} </p>
-                    <p style="margin: 0px;"> <span class="text-primary">College:</span> {{selectedUser.instituteName}} </p>
+                    <p style="margin: 0px;"> <span class="text-secondary">Email ID:</span> {{selectedUser.email}} </p>
+                    <p style="margin: 0px;"> <span class="text-secondary">Contact#:</span> {{selectedUser.contact}} </p>
+                    <p style="margin: 0px;"> <span class="text-secondary">Stream:</span> {{selectedUser.stream}} </p>
+                    <p style="margin: 0px;"> <span class="text-secondary">Year:</span> {{selectedUser.year}} </p>
+                    <p style="margin: 0px;"> <span class="text-secondary">College:</span> {{selectedUser.instituteName}} </p>
                     <br>
                 </div>
                 <p>
@@ -40,7 +40,7 @@
                         <mat-hint color="warn" *ngIf="newPassword != confirmNewPassword"> Passwords do not match </mat-hint>
                     </mat-form-field>
                 </p>
-                <button mat-raised-button color="primary" type="submit"
+                <button mat-raised-button color="secondary" type="submit"
                     [disabled]="changeP.form.invalid || newPassword != confirmNewPassword">Confirm & Reset</button>
             </div>
             <div class="col-sm-3"></div>
