Photo Removed, Coupon Logic Changed

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,14 @@ button {
     overflow: hidden !important;
 }
 
+.mat-card {
+    vertical-align: top !important;
+}
+
+.mat-checkbox-label {
+    white-space: normal;
+}
+
 .mat-chip-list-wrapper {
     display: block !important;
 }
