--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,64 +1,63 @@
 <br>
 <div class="container">
     <br>
-    <h4 class="text-center text-danger fontS">Registration Info</h4>
+    <h4 class="text-center text-danger fontS">My Registration Info</h4>
     <br>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8">
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>Name:</h5></div>
-                <div class="col-sm-8"><h5> {{userData.name}} </h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Name:</h5></div>
+                <div class="col-sm-6"><h5> {{userData.name}} </h5></div>
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>Email ID:</h5></div>
-                <div class="col-sm-8"><h5> {{userData.email}} </h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Email ID:</h5></div>
+                <div class="col-sm-6"><h5> {{userData.email}} </h5></div>
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>Stream:</h5></div>
-                <div class="col-sm-8"><h5> {{userData.stream}} </h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Stream:</h5></div>
+                <div class="col-sm-6"><h5> {{userData.stream}} </h5></div>
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>Year:</h5></div>
-                <div class="col-sm-8"><h5> {{userData.year}} </h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Year:</h5></div>
+                <div class="col-sm-6"><h5> {{userData.year}} </h5></div>
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>Contact Number:</h5></div>
-                <div class="col-sm-8"><h5> {{userData.contact}} </h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Contact Number:</h5></div>
+                <div class="col-sm-6"><h5> {{userData.contact}} </h5></div>
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>College Name:</h5></div>
-                <div class="col-sm-8"><h5> {{userData.instituteName}} </h5></div>
+                <div class="col-sm-6 text-secondary"><h5>College Name:</h5></div>
+                <div class="col-sm-6"><h5> {{userData.instituteName}} </h5></div>
             </div>
             <br>
             <div class="row fontS">
-                <div class="col-sm-4 text-secondary"><h5>Event Registration:</h5></div>
-                <div class="col-sm-8" *ngIf="eventRegistered"><h5>Complete, Paid INR {{userData.total}}/- <br><a [href]="receiptUrl">Download Receipt</a></h5></div>
-                <div class="col-sm-8 text-danger" *ngIf="!eventRegistered"><h5>Pending...</h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Event Registration:</h5></div>
+                <div class="col-sm-6" *ngIf="eventRegistered"><h5>Complete, Paid INR {{userData.total}}/- <br><a [href]="receiptUrl">Download Receipt</a></h5></div>
+                <div class="col-sm-6 text-danger" *ngIf="!eventRegistered"><h5>Pending...</h5></div>
             </div>
             <br>
             <div class="row fontS" *ngIf="eventRegistered">
-                <div class="col-sm-4 text-secondary"><h5>Registration Verification:</h5></div>
-                <div class="col-sm-8" *ngIf="userData.verified "><h5>Complete</h5></div>
-                <div class="col-sm-8 text-danger" *ngIf="!userData.verified "><h5>Pending...</h5></div>
+                <div class="col-sm-6 text-secondary"><h5>Registration Verification:</h5></div>
+                <div class="col-sm-6" *ngIf="userData.verified "><h5>Complete</h5></div>
+                <div class="col-sm-6 text-danger" *ngIf="!userData.verified "><h5>Pending...</h5></div>
             </div>
             <br>
         </div>
-        <div class="col-sm-6 text-center">
-            <img [src]="photoUrl" style="width: 50%;" />
-            <br>
-        </div>
+        <div class="col-sm-2"></div>
     </div>
 </div>
 <div class="container" *ngIf="!eventRegistered">
     <div class="row">
         <div class="col-sm-12">
+            
             <br>
-            <h4 class="text-center text-danger fontS">Event Info </h4>
+            <h4 class="text-center text-danger fontS">Event Info</h4>
             <small class="text-secondary text-center">The events which are marked <mat-icon class="text-danger">check_circle</mat-icon> will be eligible for discount when a valid coupon code is applied.</small>
             <br><br>
             <mat-accordion class="example-headers-align mat-elevation-z8" multi>
@@ -75,7 +74,7 @@
                 <mat-card class="col-sm-4 example-card mat-elevation-z8" style="display: inline-block;" *ngFor="let event of categoryData.events; let i=index">
                     <mat-card-header>
                         <mat-card-title><mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)">
-                            {{event.name}} @ INR {{event.fees}}/- <mat-icon class="text-danger" *ngIf="event.couponApplicable">check_circle</mat-icon>
+                            {{event.name}} @ {{event.fees ? 'INR '+event.fees+'/-' : 'FREE'}} <mat-icon class="text-danger" *ngIf="event.couponApplicable">check_circle</mat-icon>
                         </mat-checkbox></mat-card-title>
                         <mat-card-subtitle></mat-card-subtitle>
                     </mat-card-header>
@@ -83,59 +82,23 @@
                         <p style="color: rgba(255,255,255,.7);"> 
                             {{event.description}}
                         </p>
-                        <p *ngIf="event.extra">
-                            Add extra money, before selecting event
-                        </p>
-                        <input matInput *ngIf="event.extra" type="number" min="0" placeholder="Extra money" name="extraMoney" [(ngModel)]="event.extraMoney" />
+                        <mat-form-field appearance="outline" style="width: 100%;" *ngIf="event.extra">
+                            <mat-label>Add extra money, before selecting event:</mat-label>
+                            <input matInput type="number" min="0" placeholder="Extra money" name="extraMoney" [(ngModel)]="event.extraMoney" />
+                        </mat-form-field>
                     </mat-card-content>
                     <!-- <mat-card-actions>
                     </mat-card-actions> -->
                 </mat-card>
 
             </mat-expansion-panel>
-            </mat-accordion>
-              
-            <!-- <div class="row" *ngFor="let categoryData of categoryDatas; let i=index">
-                <br><hr>
-                <div class="col-sm-4">
-                    <div class="row fontS">
-                        <div class="col-sm-6 text-secondary"><h5>Category:</h5></div>
-                        <div class="col-sm-6"><h5> {{categoryData.category}} </h5></div>
-                    </div>
-                    <br>
-                    <div class="row fontS">
-                        <div class="col-sm-6 text-secondary"><h5>Description:</h5></div>
-                        <div class="col-sm-6"><h5> {{categoryData.description}} </h5></div>
-                    </div>
-                </div>
-                <div class="col-sm-8">
-                        <div class="text-secondary"><h5>Events in this category:</h5></div>
-                        <div class="row fontS">
-                            <div class="col-sm-2 text-secondary"><h5>S.No</h5></div>
-                            <div class="col-sm-4 text-secondary"><h5> Name </h5></div>
-                            <div class="col-sm-4 text-secondary"><h5> Description </h5></div>
-                            <div class="col-sm-1 text-secondary" *ngIf="!eventRegistered"><h5> Fees </h5></div>
-                            <div class="col-sm-1"></div>
-                        </div>
-                        <div class="row" *ngFor="let event of categoryData.events; let i=index">
-                            <br>
-                                <div class="col-sm-2"><h5>{{i+1}}:</h5></div>
-                                <div class="col-sm-4"><h5> {{event.name}} </h5></div>
-                                <div class="col-sm-4"><h5> {{event.description}} </h5></div>
-                                <div class="col-sm-1" *ngIf="!eventRegistered"><h5> {{event.fees}} </h5></div>
-                                <div class="col-sm-1" *ngIf="!eventRegistered">
-                                    <mat-checkbox color="warn" (click)="eventRegistration(categoryData._id,event)">Register</mat-checkbox>
-                                </div>
-                        </div>
-                </div>
-            </div> -->
-            
+            </mat-accordion>            
         </div>
     </div>
 </div>
 <br><br>
 <!-- <div class="container" style="width: 100% !important;"> -->
-<div class="row text-center fontS" *ngIf="coupon.couponCode && !eventRegistered" style="background: #202020; padding: 1% 1% 0% 1% !important;">
+<div class="row text-center fontS" *ngIf="!eventRegistered" style="background: #202020; padding: 1% 1% 0% 1% !important;">
     <div class="col-sm-3 text-center">
         <mat-form-field appearance="legacy" style="width: 80%;" *ngIf="temp == 0">
             <mat-label>Enter Coupon Code here</mat-label>
@@ -157,22 +120,6 @@
     </div>
     <div class="col-sm-3">
         <button mat-raised-button (click)="eventPayment()" [disabled]="totalC + totalO == 0 || !paymentReceipt">Register for events</button>
-    </div>
-</div>
-<div class="row text-center fontS" *ngIf="!coupon.couponCode && !loading && !eventRegistered" style="background: #202020; padding: 1% 1% 0% 1% !important;">
-    <div class="col-sm-4">
-        <p>Upload Payment Receipt (.jpg, .jpeg, .png, .pdf extensions are allowed):</p>
-        <label class="btn btn-outline-danger" for="fileInput3" style="width: 100%">{{ paymentReceipt ? "Choose Other File" : "Choose File" }}
-            <input type="file" hidden id="fileInput3" accept="image/*, .pdf"
-                (change)="fileRead($event.target.files)" required>
-        </label>
-        <p>{{ paymentReceipt ? 'File Chosen: ' + paymentReceipt.name : "No File Chosen" }}</p>
-    </div>
-    <div class="col-sm-4">
-        <button mat-raised-button (click)="eventPayment()" [disabled]="totalC + totalO == 0 || !paymentReceipt">Register for events</button>
-    </div>
-    <div class="col-sm-4 text-danger">
-        <h6>You do not have any coupon. Contact admin for any issue.</h6>
     </div>
 </div>
 <br><br>
