--- a/src/app/registration-student/registration-student.component.html
+++ b/src/app/registration-student/registration-student.component.html
@@ -1,150 +1,139 @@
-<div class="container" >
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
-            <h2 class="text-warning text-center fontS">Registration</h2>
-            <br>
-            <form #registerForm="ngForm" (submit)="register($event.target)" novalidate>
-                <br>
-                <h3 class="text-info fontS">Personal Details:</h3>
-                <hr>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Full Name:</mat-label>
-                                <input matInput type="text" placeholder="Your Full Name" name="name" [(ngModel)]="user.name" required />
-                            </mat-form-field>
-                        </p>
-                    </div>
-                    <div class="col-sm-6">
-                        <div>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Your Email ID:</mat-label>
-                                <input
-                                 matInput type="email" 
-                                 placeholder="Email ID"
-                                 name="email" 
-                                 #contactemail="ngModel"
-                                 [(ngModel)]="user.email"
-                                 required 
-                                 pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
-                                 (input) = "isEmailRedundant()"
-                                />
-                                <mat-hint class="text-danger" *ngIf="errors.email"> This Email is taken </mat-hint>
-                                <mat-hint class="text-danger" *ngIf="contactemail.errors && contactemail.errors.pattern"> Invalid email </mat-hint>
-                            </mat-form-field>
-                        </div>
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Your Contact Number:</mat-label>
-                                <input 
-                                 matInput 
-                                 type="tel" 
-                                 placeholder="Contact Number" 
-                                 name="contact"
-                                 #contactno="ngModel"
-                                 [(ngModel)]="user.contact"
-                                 pattern="[6-9]{1}[0-9]{9}"
-                                 (input) = "isContactRedundant()" 
-                                 required />
-                                <mat-hint class="text-danger" *ngIf="errors.contact"> This Contact is taken </mat-hint>
-                                <mat-hint class="text-danger" *ngIf="contactno.errors && contactno.errors.pattern"> Invalid Contact No </mat-hint>
-                            </mat-form-field>
-                        </p>
-                    </div>
-                </div>
-                <br>
-                <h3 class="text-info fontS">Institute Details</h3>
-                <hr>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Choose Your Year:</mat-label>
-                                <mat-select [(ngModel)]="user.year" name="year" [required]>
-                                    <mat-option value=""> Your Year </mat-option>
-                                    <mat-option value="1st"> 1st </mat-option>
-                                    <mat-option value="2nd"> 2nd </mat-option>
-                                    <mat-option value="3rd"> 3rd </mat-option>
-                                    <mat-option value="4th"> 4th </mat-option>
-                                    <mat-option value="Other"> Other </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </p>
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Your Stream:</mat-label>
-                                <input matInput type="text" placeholder="Your Stream" name="stream" [(ngModel)]="user.stream" [required]/>
-                            </mat-form-field>
-                        </p>
-                    </div>
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Your College Name:</mat-label>
-                                <input matInput type="text" placeholder="College Name" name="college" [(ngModel)]="user.instituteName" [required] />
-                            </mat-form-field>
-                        </p>
-                    </div>
-                </div>
-                <br>
-                <h3 class="text-info fontS">Photo:</h3>
-                <hr>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p>Upload Your Recent Photo (.jpg, .jpeg, .png extensions are allowed):</p>
-                        <label class="btn btn-outline-success" for="fileInput" style="width: 100%">{{ photo ? "Choose Other File" : "Choose File" }}
-                            <input type="file" hidden id="fileInput" accept="image/*"
-                                (change)="fileRead($event.target.files)" required>
-                        </label>
-                        <p>{{ photo ? 'File Chosen: ' + photo.name : "No File Chosen" }}</p>
-                    </div>
-                    <!-- <div class="col-sm-6">
-                        <p>Upload College ID Card:</p>
-                        <label class="btn btn-outline-success" for="fileInput2" style="width: 100%">{{ idcard ? "Choose Other File" : "Choose File" }}
-                            <input type="file" hidden id="fileInput2" accept="image/*"
-                                (change)="fileRead($event.target.files,false)" required>
-                        </label>
-                        <p>{{ idcard ? 'File Chosen: ' + idcard.name : "No File Chosen" }}</p>
-                    </div> -->
-                </div>
-                <br>
-                <h3 class="text-info fontS">Account Creation:</h3>
-                <hr>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Type in Your New Account Password:</mat-label>
-                                <input matInput type="password" placeholder="Password" name="password" (input)="compare()" [(ngModel)]="user.password" required />
-                            </mat-form-field>
-                        </p>
-                    </div>
-                    <div class="col-sm-6">
-                        <p>
-                            <mat-form-field appearance="outline" style="width: 100%;">
-                                <mat-label>Re-type New Account Password:</mat-label>
-                                <input matInput type="password" placeholder="Password Once Again" name="password2" (input)="compare()" [(ngModel)]="temp2" required />
-                                <mat-hint *ngIf="errors.password"> Passwords do not match </mat-hint>
-                            </mat-form-field>
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-4">
-                        <button mat-raised-button color="primary" type="submit"
-                            [disabled]="registerForm.form.invalid || errors.password || errors.email || errors.contact || !photo ">Register</button>
-                    </div>
-                    <div class="col-8">
-                        <p class="fontS text-center">Already Registered! <button mat-raised-button color="accent" routerLink="/home">Login</button></p>
-                    </div>
-                </div>
-                <br>
-            </form>
+<div class="container">
+    <br>
+    <h2 class="text-danger text-center fontS">Registration</h2>
+    <form #registerForm="ngForm" (submit)="register($event.target)" novalidate>
+        <br>
+        <h3 class="text-secondary fontS">Personal Details:</h3>
+        <hr>
+        <div class="row">
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Full Name:</mat-label>
+                        <input matInput type="text" placeholder="Your Full Name" name="name" [(ngModel)]="user.name" required />
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Your Email ID:</mat-label>
+                        <input
+                            matInput type="email" 
+                            placeholder="Email ID"
+                            name="email" 
+                            #contactemail="ngModel"
+                            [(ngModel)]="user.email"
+                            required 
+                            pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"
+                            (input) = "isEmailRedundant()"
+                        />
+                        <mat-hint class="text-danger" *ngIf="errors.email"> This Email is taken </mat-hint>
+                        <mat-hint class="text-danger" *ngIf="contactemail.errors && contactemail.errors.pattern"> Invalid email </mat-hint>
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Your Contact Number:</mat-label>
+                        <input 
+                            matInput 
+                            type="tel" 
+                            placeholder="Contact Number" 
+                            name="contact"
+                            #contactno="ngModel"
+                            [(ngModel)]="user.contact"
+                            pattern="[6-9]{1}[0-9]{9}"
+                            (input) = "isContactRedundant()" 
+                            required />
+                        <mat-hint class="text-danger" *ngIf="errors.contact"> This Contact is taken </mat-hint>
+                        <mat-hint class="text-danger" *ngIf="contactno.errors && contactno.errors.pattern"> Invalid Contact No </mat-hint>
+                    </mat-form-field>
+                </p>
+            </div>
         </div>
-        <div class="col-sm-2"></div>
-    </div>
+        <br>
+        <h3 class="text-secondary fontS">Institute Details</h3>
+        <hr>
+        <div class="row">
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Choose Your Year:</mat-label>
+                        <mat-select [(ngModel)]="user.year" name="year" required>
+                            <mat-option value=""> Your Year </mat-option>
+                            <mat-option value="1st"> 1st </mat-option>
+                            <mat-option value="2nd"> 2nd </mat-option>
+                            <mat-option value="3rd"> 3rd </mat-option>
+                            <mat-option value="4th"> 4th </mat-option>
+                            <mat-option value="Other"> Other </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Your Stream:</mat-label>
+                        <input matInput type="text" placeholder="Your Stream" name="stream" [(ngModel)]="user.stream" [required]/>
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Your College Name:</mat-label>
+                        <input matInput type="text" placeholder="College Name" name="college" [(ngModel)]="user.instituteName" [required] />
+                    </mat-form-field>
+                </p>
+            </div>
+        </div>
+        <br>
+        <h3 class="text-secondary fontS">Account Creation</h3>
+        <hr>
+        <!-- <div class="row">
+            <div class="col-sm-6">
+                <p>Upload College ID Card:</p>
+                <label class="btn btn-outline-success" for="fileInput2" style="width: 100%">{{ idcard ? "Choose Other File" : "Choose File" }}
+                    <input type="file" hidden id="fileInput2" accept="image/*"
+                        (change)="fileRead($event.target.files,false)" required>
+                </label>
+                <p>{{ idcard ? 'File Chosen: ' + idcard.name : "No File Chosen" }}</p>
+            </div>
+        </div>
+        <br>
+        <h3 class="text-secondary fontS">Account Creation</h3>
+        <hr> -->
+        <div class="row">
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Type in Your New Account Password:</mat-label>
+                        <input matInput type="password" placeholder="Password" name="password" (input)="compare()" [(ngModel)]="user.password" required />
+                    </mat-form-field>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <p>
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Re-type New Account Password:</mat-label>
+                        <input matInput type="password" placeholder="Password Once Again" name="password2" (input)="compare()" [(ngModel)]="temp2" required />
+                        <mat-hint *ngIf="errors.password"> Passwords do not match </mat-hint>
+                    </mat-form-field>
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <button mat-raised-button color="primary" type="submit"
+                    [disabled]="registerForm.form.invalid || errors.password || errors.email || errors.contact">Register</button>
+            </div>
+            <div class="col-sm-8">
+                <p class="fontS float-right">Are you Already Registered? <button mat-raised-button routerLink="/home">Login</button></p>
+            </div>
+        </div>
+    </form>
 </div>
 
 
