--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -30,11 +30,9 @@
         <mat-checkbox color="warn" (click)="toggle('i')" [(ngModel)]="show[8]" class="fontS">Payment Receipt</mat-checkbox>
     </div>
     <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[9]" class="fontS">Photo</mat-checkbox>
+        <mat-checkbox color="warn" (click)="toggle('j')" [(ngModel)]="show[10]" class="fontS">Action</mat-checkbox>
     </div>
-    <div class="col-md-2">
-        <mat-checkbox color="warn" (click)="toggle('k')" [(ngModel)]="show[10]" class="fontS">Action</mat-checkbox>
-    </div>
+    <div class="col-md-2"></div>
     <div class="col-md-2"></div>
 </div>
 <br>
@@ -88,12 +86,6 @@
         </td>
     </ng-container>
     <ng-container matColumnDef="j">
-        <th mat-header-cell *matHeaderCellDef class="fontS"> Photo </th>
-        <td mat-cell *matCellDef="let user" class="fontS"> 
-            <a [href]="url+user._id+'/photo.'+user.photo">Download Photo</a>
-        </td>
-    </ng-container>
-    <ng-container matColumnDef="k">
         <th mat-header-cell *matHeaderCellDef class="fontS"> Action </th>
         <td mat-cell *matCellDef="let user" class="fontS"> 
             <button mat-icon-button
