--- a/src/app/registration-student/registration-student.component.html
+++ b/src/app/registration-student/registration-student.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <br>
-    <h2 class="text-danger text-center fontS">Registration</h2>
+    <h2 class="text-danger text-center header">Registration</h2>
     <form #registerForm="ngForm" (submit)="register($event.target)" novalidate>
         <br>
-        <h3 class="text-secondary fontS">Personal Details:</h3>
+        <h3 class="text-secondary header">Personal Details:</h3>
         <hr>
         <div class="row">
             <div class="col-sm-4">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <br>
-        <h3 class="text-secondary fontS">Institute Details</h3>
+        <h3 class="text-secondary header">Institute Details</h3>
         <hr>
         <div class="row">
             <div class="col-sm-4">
@@ -90,7 +90,7 @@
             </div>
         </div>
         <br>
-        <h3 class="text-secondary fontS">Account Creation</h3>
+        <h3 class="text-secondary header">Account Creation</h3>
         <hr>
         <!-- <div class="row">
             <div class="col-sm-6">
