--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="row">
     <div class="col-sm-8" style="padding: 2% 5%;">
-        <h1 class="display-4 text-center fontS" *ngIf="!loading">{{settings.title}}</h1>
+        <h1 class="display-4 text-center header" *ngIf="!loading">{{settings.title}}</h1>
         <hr>
         <p *ngIf="!loading" [innerHTML]="settings.description"></p>
         <img *ngIf="settings.banner != 'NA'" [src]="settings.banner" style="width: 100%;" />
     </div>
     <div class="col-sm-4" style="padding: 2% 5%;">
         <br />
-        <h3 class="text-center text-danger fontS">Login</h3>
+        <h3 class="text-center text-danger header">Login</h3>
         <br>
         <form #loginForm="ngForm" (submit)="login($event.target)" novalidate>
             <p>
