--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,10 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
 }
 
+.header {
+    font-family: '../src/assets/HACKED.ttf';
+}
+
 button {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
 }
