--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,13 @@
         <h1 class="display-4 text-center header" *ngIf="!loading">{{settings.title}}</h1>
         <hr>
         <p *ngIf="!loading" [innerHTML]="settings.description"></p>
-        <img *ngIf="settings.banner != 'NA'" [src]="settings.banner" style="width: 100%;" />
+        <div class="row">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <img *ngIf="settings.banner != 'NA'" [src]="settings.banner" style="width: 100%;" />
+            </div>
+            <div class="col-sm-2"></div>
+        </div>
     </div>
     <div class="col-sm-4" style="padding: 2% 5%;">
         <br />
