Extra Money enhanced

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -57,7 +57,7 @@
         <div class="col-sm-12">
             
             <br>
-            <h4 class="text-center text-danger header">Event Info</h4>
+            <h4 class="text-center text-danger header">Event Info {{eventReg | json}}</h4>
             <small class="text-secondary text-center">The events which are marked <mat-icon class="text-danger">check_circle</mat-icon> will be eligible for discount when a valid coupon code is applied.</small>
             <br><br>
             <mat-accordion class="example-headers-align mat-elevation-z8" multi>
@@ -82,9 +82,9 @@
                         <p style="color: rgba(255,255,255,.7);"> 
                             {{event.description}}
                         </p>
-                        <mat-form-field appearance="outline" style="width: 100%;" *ngIf="event.extra">
+                        <mat-form-field appearance="outline" style="width: 100%;" *ngIf="event.extra && event.show">
                             <mat-label>Add extra amount(Price:{{event.extraMoney}}), before selecting event:</mat-label>
-                            <input matInput type="number" min="0" placeholder="Extra Amount" name="extraAmount" [(ngModel)]="event.extraAmount" />
+                            <input matInput type="number" min="0" placeholder="Extra Amount" (input)="addAmount(categoryData._id,event)" name="extraAmount" [(ngModel)]="event.extraAmount" />
                         </mat-form-field>
                     </mat-card-content>
                     <!-- <mat-card-actions>
